--- a/sam-s3monitor.yml
+++ b/sam-s3monitor.yml
@@ -6,13 +6,8 @@ Parameters:
 
   env:
     Type: String
-    Default: prod
+    Default: dev
     Description: Environment Name
-
-  LambdaRole:
-    Type: 'AWS::SSM::Parameter::Value<String>'
-    Default: s3-monitor-role-prod
-    Description: Get from Parameter Store the ARN of the LambdaRole
 
 Resources:
   s3monitor:
@@ -20,12 +15,21 @@ Resources:
     Properties:
       FunctionName: !Sub s3-monitor-${env}
       Description: Monitoring for S3 (Backups Jeedom)
-      Handler: s3monitor.main
-      Runtime: python3.6
+      Handler: handlers.main
+      Runtime: python2.7
       CodeUri: ./build
-      Role: !Sub ${LambdaRole}
       MemorySize: 128
       Timeout: 30
+      Layers: 
+        - !Ref boto3layer
+      Policies:
+        - AWSLambdaExecute # Managed Policy
+        - Version: '2012-10-17' # Policy Document
+          Statement:
+            - Effect: Allow
+              Action:
+              - s3:List*
+              Resource: 'arn:aws:s3:::zoph.backup'
       Events:
         Timer:
           Type: Schedule
@@ -33,3 +37,14 @@ Resources:
             Schedule: rate(1 day)
       Tags:
         Project: s3-monitor
+
+  boto3layer:
+    Type: 'AWS::Serverless::LayerVersion'
+    Properties:
+      LayerName: boto3-layer
+      Description: boto3 and botocore layer
+      ContentUri: ./layer
+      CompatibleRuntimes:
+        - python2.7
+      LicenseInfo: 'Available under the MIT-0 license.'
+      RetentionPolicy: Retain
