--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - uses: mgenteluci/cloudformation-deploy-action@v1.3.0
       env:
-        TEMPLATE: 'build/template-lambda.yml'
+        TEMPLATE: 'template-lambda.yml'
         AWS_STACK_NAME: 'zoph-s3monitor-dev'
         AWS_REGION: 'eu-west-1'
         AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
