--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
 
-      - name: Test credentials
+      - name: Test credentials - whoami
         run: |
-          aws s3 ls
+          aws sts get-caller-identity
 
       # - name: sam build
       #   uses: youyo/aws-sam-action/python3.7@master
@@ -36,13 +36,3 @@ jobs:
       #   with:
       #     sam_command: 'deploy --no-fail-on-empty-changeset'
 
-
-    # - uses: actions/checkout@v1
-    # - uses: mgenteluci/cloudformation-deploy-action@v1.3.0
-    #   env:
-    #     TEMPLATE: 'template-lambda.yml'
-    #     AWS_STACK_NAME: 'zoph-s3monitor-dev'
-    #     AWS_REGION: 'eu-west-1'
-    #     AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-    #     AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-    #     AWS_DEPLOY_BUCKET: ${{secrets.AWS_DEPLOY_BUCKET}}
