--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,11 +30,12 @@ jobs:
         # sam deploy now implicitly performs the functionality of sam package. You can use the sam deploy command directly to package and deploy your application.
         uses: youyo/aws-sam-action/python3.7@master
         with:
-          sam_command: |
-            build \
-            -b ./build \
-            -s . \
-            -t ./sam.yml
+          sam_command: build
+          # sam_command: |
+          #   build \
+          #   -b ./build \
+          #   -s . \
+          #   -t ./sam.yml
 
       # - name: sam deploy
       #   uses: youyo/aws-sam-action/python3.7@master
