--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,21 @@ jobs:
           aws sts get-caller-identity
 
       - name: sam build
-        # sam deploy now implicitly performs the functionality of sam package. You can use the sam deploy command directly to package and deploy your application.
-        uses: youyo/aws-sam-action/python3.7@master
+        uses: TractorZoom/sam-cli-action@master
         with:
-          sam_command: build
+          sam_command: "build"
+
+      # - name: sam deploy
+      #   uses: TractorZoom/sam-cli-action@master
+      #   with:
+      #     sam_command: "deploy"
+
+
+      # - name: sam build
+        # sam deploy now implicitly performs the functionality of sam package. You can use the sam deploy command directly to package and deploy your application.
+        # uses: youyo/aws-sam-action/python3.7@master
+        # with:
+        #   sam_command: build
           # sam_command: |
           #   build \
           #   -b ./build \
