--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,22 +9,22 @@ jobs:
   aws_sam:
     runs-on: ubuntu-latest
     steps:
-      - name: Assume Role
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
-          role-to-assume: zoph-admin
-          role-duration-seconds: 1200
-          role-session-name: GH-Actions
+      # - name: Assume Role
+      #   uses: aws-actions/configure-aws-credentials@v1
+      #   with:
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws-region: eu-west-1
+      #     role-to-assume: zoph-admin
+      #     role-duration-seconds: 1200
+      #     role-session-name: GH-Actions
 
       - name: Checkout
         uses: actions/checkout@master
 
-      - name: Test credentials - whoami
-        run: |
-          aws sts get-caller-identity
+      # - name: Test credentials - whoami
+      #   run: |
+      #     aws sts get-caller-identity
 
       - name: sam build
         uses: TractorZoom/sam-cli-action@master
