--- a/template.yml
+++ b/template.yml
@@ -41,7 +41,7 @@ Resources:
       FunctionName: !Sub s3-monitor-${ENV}
       Description: !Sub S3 Backup Monitor (${PROJECT})
       Handler: handlers.main
-      Runtime: python3.7
+      Runtime: python3.8
       CodeUri: ./build
       MemorySize: 128
       Timeout: 30
@@ -88,5 +88,6 @@ Resources:
         - python2.7
         - python3.6
         - python3.7
+        - python3.8
       LicenseInfo: 'Available under the MIT-0 license.'
       RetentionPolicy: Retain
