--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
+          aws-region: ${{ secrets.REGION }}
           role-to-assume: zoph-admin
           role-duration-seconds: 1200
           role-session-name: GH-Actions
@@ -30,13 +30,29 @@ jobs:
         uses: TractorZoom/sam-cli-action@master
         with:
           sam_command: build -b ./build
+
+      - name: sam deploy
+        uses: TractorZoom/sam-cli-action@master
+        with:
+          sam_command: |
+            deploy \
+              --template-file build/template.yaml \
+              --region ${{ secrets.REGION }} \
+              --capabilities CAPABILITY_IAM" \
+              --parameter-overrides \
+                ENV=${ENV} \
+                MONITORINGBUCKET=$MONITORING_BUCKET \
+                S3PREFIX=$S3_PREFIX \
+                PROJECT=$PROJECT \
+                RECIPIENTS=$RECIPIENTS \
+                SENDER=$SENDER \
+                AWSREGION=${{ secrets.REGION }} \
+              --no-fail-on-empty-changeset
         env:
-          # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          # AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.REGION }}
+          ENV: dev
+          MONITORINGBUCKET: ${{ secrets.MONITORINGBUCKET }}
+          S3PREFIX: ${{ secrets.S3PREFIX }}
+          PROJECT: ${{ secrets.PROJECT }}
+          RECIPIENTS: ${{ secrets.RECIPIENTS }}
+          SENDER: ${{ secrets.SENDER }}
 
-
-      # - name: sam deploy
-      #   uses: TractorZoom/sam-cli-action@master
-      #   with:
-      #     sam_command: "deploy"
