--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         uses: TractorZoom/sam-cli-action@master
         with:
           sam_command: |
-            "deploy \
+            deploy \
               --template-file build/template.yaml \
               --region ${{ secrets.REGION }} \
               --capabilities CAPABILITY_IAM" \
@@ -47,7 +47,7 @@ jobs:
                 RECIPIENTS=$RECIPIENTS, \
                 SENDER=$SENDER, \
                 AWSREGION=${{ secrets.REGION }} \
-              --no-fail-on-empty-changeset"
+              --no-fail-on-empty-changeset
         env:
           ENV: dev
           MONITORINGBUCKET: ${{ secrets.MONITORINGBUCKET }}
