param overide fix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,14 +39,7 @@ jobs:
               --template-file build/template.yaml \
               --region ${{ secrets.REGION }} \
               --capabilities CAPABILITY_IAM" \
-              --parameter-overrides \
-                ENV=${ENV}, \
-                MONITORINGBUCKET=$MONITORING_BUCKET, \
-                S3PREFIX=$S3_PREFIX, \
-                PROJECT=$PROJECT, \
-                RECIPIENTS=$RECIPIENTS, \
-                SENDER=$SENDER, \
-                AWSREGION=${{ secrets.REGION }} \
+              --parameter-overrides ENV=${ENV} MONITORINGBUCKET=$MONITORING_BUCKET S3PREFIX=$S3_PREFIX PROJECT=$PROJECT RECIPIENTS=$RECIPIENTS SENDER=$SENDER AWSREGION=${{ secrets.REGION }} \
               --no-fail-on-empty-changeset
         env:
           ENV: dev
