--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,14 +37,7 @@ jobs:
           sam_command: |
             deploy \
               --template-file build/template.yaml \
-              --parameter-overrides \
-                  ENV=$ENV \
-                  MONITORINGBUCKET=$MONITORING_BUCKET \
-                  S3PREFIX=$S3_PREFIX \
-                  PROJECT=$PROJECT \
-                  RECIPIENTS=$RECIPIENTS \
-                  SENDER=$SENDER \
-                  AWSREGION=${{ secrets.REGION }}
+              --parameter-overrides ENV=$ENV MONITORINGBUCKET=$MONITORING_BUCKET S3PREFIX=$S3_PREFIX PROJECT=$PROJECT RECIPIENTS=$RECIPIENTS SENDER=$SENDER AWSREGION=${{ secrets.REGION }}
         env:
           ENV: dev
           MONITORINGBUCKET: ${{ secrets.MONITORINGBUCKET }}
