--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,10 +37,10 @@ jobs:
           sam_command: |
             deploy \
               --template-file build/template.yaml \
-              --stack-name $PROJECT-$ENV \
-              --s3-bucket $PROJECT-artifacts \
+              --stack-name "$PROJECT-$ENV" \
+              --s3-bucket "$PROJECT-artifacts" \
               --region ${{ secrets.REGION }} \
-              --capabilities CAPABILITY_IAM \
+              --capabilities "CAPABILITY_IAM" \
               --no-fail-on-empty-changeset \
               --parameter-overrides ENV=$ENV MONITORINGBUCKET=$MONITORING_BUCKET S3PREFIX=$S3_PREFIX PROJECT=$PROJECT RECIPIENTS=$RECIPIENTS SENDER=$SENDER AWSREGION=${{ secrets.REGION }}
         env:
