--- a/template.yml
+++ b/template.yml
@@ -78,16 +78,16 @@ Resources:
         Monitoring_Bucket_Name: !Ref MONITORINGBUCKET
         Region: !Ref AWSREGION
 
-  boto3layer:
-    Type: 'AWS::Serverless::LayerVersion'
-    Properties:
-      LayerName: boto3-layer
-      Description: boto3 and botocore layer
-      ContentUri: ./layer
-      CompatibleRuntimes:
-        - python2.7
-        - python3.6
-        - python3.7
-        - python3.8
-      LicenseInfo: 'Available under the MIT-0 license.'
-      RetentionPolicy: Retain
+  # boto3layer:
+  #   Type: 'AWS::Serverless::LayerVersion'
+  #   Properties:
+  #     LayerName: boto3-layer
+  #     Description: boto3 and botocore layer
+  #     ContentUri: ./layer
+  #     CompatibleRuntimes:
+  #       - python2.7
+  #       - python3.6
+  #       - python3.7
+  #       - python3.8
+  #     LicenseInfo: 'Available under the MIT-0 license.'
+  #     RetentionPolicy: Retain
