--- a/template.yml
+++ b/template.yml
@@ -41,12 +41,12 @@ Resources:
       FunctionName: !Sub s3-monitor-${ENV}
       Description: !Sub S3 Backup Monitor (${PROJECT})
       Handler: handlers.main
-      Runtime: python3.8
+      Runtime: python3.7
       CodeUri: ./python
       MemorySize: 128
       Timeout: 30
       Layers:
-        - !Ref boto3layer
+        - !Sub arn:aws:lambda:{AWS::Region}:{AWS::AccountId}:layer:boto3-layer:15
       Environment:
         Variables:
           MONITORINGBUCKET: !Ref MONITORINGBUCKET
