--- a/template.yml
+++ b/template.yml
@@ -32,6 +32,14 @@ Parameters:
     Type: String
     Default: no_sender_defined@domain.com
     Description: Sender email addresses
+  BOTOLAYER:
+    Type: String
+    Default: boto3
+    Description: Layer name for boto3
+  BOTOLAYERVERSION:
+    Type: Number
+    Default: 1
+    Description: Layer version
 ###########################################################
 Resources:
 ###########################################################
@@ -46,7 +54,7 @@ Resources:
       MemorySize: 128
       Timeout: 30
       Layers:
-        - !Sub ${BOTOLAYER}
+        - !Sub 'arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:layer:${BOTOLAYER}:${BOTOLAYERVERSION}'
       Environment:
         Variables:
           MONITORINGBUCKET: !Ref MONITORINGBUCKET
