--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,9 +1,9 @@
-name: "[Prod] GhA - Deploy s3-backup-notifier"
+name: "[DEV] GhA - Deploy s3-backup-notifier"
 
 on: 
   push:
     branches:
-    - master
+    - dev
 
 jobs:
   aws_sam:
@@ -37,8 +37,8 @@ jobs:
           sam_command: |
             deploy \
               --template-file build/template.yaml \
-              --stack-name ${{ secrets.PROJECT }}-prod \
+              --stack-name ${{ secrets.PROJECT }}-dev \
               --s3-bucket ${{ secrets.PROJECT }}-artifacts \
               --region ${{ secrets.REGION }} \
               --no-fail-on-empty-changeset \
-              --parameter-overrides ENV=prod MONITORINGBUCKET=${{ secrets.MONITORINGBUCKET }} S3PREFIX=${{ secrets.S3PREFIX }} PROJECT=${{ secrets.PROJECT }} RECIPIENTS=${{ secrets.RECIPIENTS }} SENDER=${{ secrets.SENDER }} AWSREGION=${{ secrets.REGION }} --capabilities CAPABILITY_IAM
+              --parameter-overrides ENV=dev MONITORINGBUCKET=${{ secrets.MONITORINGBUCKET }} S3PREFIX=${{ secrets.S3PREFIX }} PROJECT=${{ secrets.PROJECT }} RECIPIENTS=${{ secrets.RECIPIENTS }} SENDER=${{ secrets.SENDER }} AWSREGION=${{ secrets.REGION }} --capabilities CAPABILITY_IAM
