--- a/template.yml
+++ b/template.yml
@@ -81,6 +81,7 @@ Resources:
     Properties: 
       FilterPattern: 'ERROR'
       LogGroupName: !Sub "/aws/lambda/${PROJECT}-${ENV}"
+      /aws/lambda/s3-monitor-dev
       MetricTransformations: 
         -
           MetricValue: "1"
