--- a/template.yml
+++ b/template.yml
@@ -39,7 +39,7 @@ Resources:
     Type: 'AWS::Serverless::Function'
     Properties:
       FunctionName: !Sub s3-monitor-${ENV}
-      Description: !Sub S3 Backup Monitor (${PROJECT}) - https://zoph.io
+      Description: !Sub '[${ENV}]S3 Backup Monitor (${PROJECT}) - https://zoph.io'
       Handler: handlers.main
       Runtime: python3.8
       CodeUri: ./python
@@ -68,13 +68,14 @@ Resources:
         Timer:
           Type: Schedule
           Properties:
-            Name: s3-monitor-schedule
+            Name: s3-monitor-schedule-${ENV}
             Schedule: cron(0 4 * * ? *)
       Tags:
         Project: !Ref PROJECT
         Environment: !Ref ENV
-        Monitoring_Bucket_Name: !Ref MONITORINGBUCKET
+        MonitoredBucketName: !Ref MONITORINGBUCKET
         Region: !Ref AWSREGION
+        Reference: 'https://zoph.io'
 
   CloudWatchLogsMetricsFilter:
     Type: AWS::Logs::MetricFilter
@@ -110,7 +111,7 @@ Resources:
   AlertingTopic:
     Type: "AWS::SNS::Topic"
     Properties:
-      DisplayName: !Sub "Alarm Topic for ${PROJECT}"
+      DisplayName: !Sub "[${ENV}] Alarm Topic for ${PROJECT}"
       Subscription:
         - Protocol: email
           Endpoint: !Select [0, !Split [" ", !Ref RECIPIENTS]]
