--- a/template.yml
+++ b/template.yml
@@ -73,7 +73,7 @@ Resources:
           Type: Schedule
           Properties:
             Name: !Sub s3-monitor-schedule-${ENV}
-            Enabled: !If [IsProdEnvironment, true, false]
+            Enabled: !If [IsProdEnvironment, 'true', 'false']
             Schedule: cron(0 4 * * ? *)
       Tags:
         Project: !Ref PROJECT
@@ -123,4 +123,4 @@ Resources:
 
 Outputs:
   IsProdEnv:
-    Value: !If [IsProdEnvironment, true, false]
+    Value: !If [IsProdEnvironment, 'true', 'false']
