--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -42,3 +42,10 @@ jobs:
               --region ${{ secrets.REGION }} \
               --no-fail-on-empty-changeset \
               --parameter-overrides ENV=dev MONITORINGBUCKET=${{ secrets.MONITORINGBUCKET }} S3PREFIX=${{ secrets.S3PREFIX }} PROJECT=${{ secrets.PROJECT }} RECIPIENTS=${{ secrets.RECIPIENTS }} SENDER=${{ secrets.SENDER }} AWSREGION=${{ secrets.REGION }} CRONENABLED=false --capabilities CAPABILITY_IAM
+
+      - name: pull-request
+        uses: repo-sync/pull-request@v2
+        with:
+          pr_reviewer: "z0ph"
+          pr_assignee: "z0ph"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
