--- a/template.yml
+++ b/template.yml
@@ -72,19 +72,39 @@ Resources:
               Action:
                 - ses:SendEmail
               Resource: '*'
-      Events:
-        Timer:
-          Type: Schedule
-          Properties:
-            Name: !Sub s3-monitor-schedule-${ENV}
-            Enabled: !Ref CRONENABLED
-            Schedule: cron(0 4 * * ? *)
+      # Events:
+      #   Timer:
+      #     Type: Schedule
+      #     Properties:
+      #       Name: !Sub s3-monitor-schedule-${ENV}
+      #       Enabled: !Ref CRONENABLED
+      #       Schedule: cron(0 4 * * ? *)
       Tags:
         Project: !Ref PROJECT
         Environment: !Ref ENV
         MonitoredBucketName: !Ref MONITORINGBUCKET
         Region: !Ref AWSREGION
         Reference: 'https://zoph.io'
+
+    LambdaSchedule:
+        Type: AWS::Events::Rule
+        Properties:
+          State: !Ref CRONENABLED
+          ScheduleExpression: cron(0 4 * * ? *)
+          Description: !Sub Lambda Schedule for ${MONITORINGBUCKET}
+          Targets:
+          - Id: s3-monitor-event-schedule
+            Arn:
+              Fn::GetAtt:
+              - s3monitor
+              - Arn
+
+    InvokConfig:
+      Type: AWS::Lambda::EventInvokeConfig
+      Properties: 
+        FunctionName: !Ref s3monitor
+        Qualifier: $LATEST
+        MaximumRetryAttempts: 0
 
   CloudWatchLogsMetricsFilter:
     Type: AWS::Logs::MetricFilter
