--- a/template.yml
+++ b/template.yml
@@ -1,9 +1,9 @@
-AWSTemplateFormatVersion: '2010-09-09'
-Transform: 'AWS::Serverless-2016-10-31'
+AWSTemplateFormatVersion: "2010-09-09"
+Transform: "AWS::Serverless-2016-10-31"
 Description: Provision the AWS Lambda function of s3-monitor - https://zoph.io
 ############################################################
 Parameters:
-############################################################
+  ############################################################
   ENV:
     Type: String
     Default: dev
@@ -38,21 +38,23 @@ Parameters:
     Description: Enable Schedule or not
 ###########################################################
 Conditions:
-###########################################################
-  IsProdEnvironment: !Equals [ !Ref ENV, prod ]
+  ###########################################################
+  IsProdEnvironment: !Equals [!Ref ENV, prod]
 ###########################################################
 Resources:
-###########################################################
+  ###########################################################
   s3monitor:
-    Type: 'AWS::Serverless::Function'
+    Type: "AWS::Serverless::Function"
     Properties:
       FunctionName: !Sub s3-monitor-${ENV}
-      Description: !Sub '[${ENV}]S3 Backup Monitor (${PROJECT}) - https://zoph.io'
+      Description: !Sub "[${ENV}] S3 Backup Monitor (${PROJECT}) - https://zoph.io"
       Handler: handlers.main
-      Runtime: python3.8
+      Runtime: python3.10
       CodeUri: ./python
       MemorySize: 128
       Timeout: 30
+      Architectures:
+        - arm64
       Environment:
         Variables:
           MONITORINGBUCKET: !Ref MONITORINGBUCKET
@@ -62,82 +64,81 @@ Resources:
           AWSREGION: !Ref AWSREGION
       Policies:
         - AWSLambdaExecute # Managed Policy
-        - Version: '2012-10-17' # Policy Document
+        - Version: "2012-10-17" # Policy Document
           Statement:
             - Effect: Allow
               Action:
-              - s3:List*
-              Resource: !Sub 'arn:aws:s3:::${MONITORINGBUCKET}'
+                - s3:List*
+              Resource: !Sub "arn:aws:s3:::${MONITORINGBUCKET}"
             - Effect: Allow
               Action:
                 - ses:SendEmail
-              Resource: '*'
+              Resource: "*"
       Tags:
         Project: !Ref PROJECT
         Environment: !Ref ENV
         MonitoredBucketName: !Ref MONITORINGBUCKET
         Region: !Ref AWSREGION
-        Reference: 'https://zoph.io'
+        Reference: "https://zoph.io"
 
   LambdaSchedule:
-        Type: AWS::Events::Rule
-        Properties:
-          State: !Ref CRONENABLED
-          ScheduleExpression: cron(30 6 * * ? *)
-          Description: !Sub Lambda Schedule for ${PROJECT}
-          Targets:
-          - Id: s3-monitor-event-schedule
-            Arn:
-              Fn::GetAtt:
+    Type: AWS::Events::Rule
+    Properties:
+      State: !Ref CRONENABLED
+      ScheduleExpression: cron(30 6 * * ? *)
+      Description: !Sub Lambda Schedule for ${PROJECT}
+      Targets:
+        - Id: s3-monitor-event-schedule
+          Arn:
+            Fn::GetAtt:
               - s3monitor
               - Arn
 
   LambdaInvokePermission:
     # https://docs.aws.amazon.com/AmazonCloudWatch/latest/events/CWE_Troubleshooting.html#LAMfunctionNotInvoked
-    Type: 'AWS::Lambda::Permission'
+    Type: "AWS::Lambda::Permission"
     Properties:
       FunctionName: !GetAtt s3monitor.Arn
-      Action: 'lambda:InvokeFunction'
+      Action: "lambda:InvokeFunction"
       Principal: events.amazonaws.com
       SourceArn: !GetAtt LambdaSchedule.Arn
 
   InvokConfig:
-      Type: AWS::Lambda::EventInvokeConfig
-      Properties: 
-        FunctionName: !Ref s3monitor
-        Qualifier: $LATEST
-        MaximumRetryAttempts: 0
+    Type: AWS::Lambda::EventInvokeConfig
+    Properties:
+      FunctionName: !Ref s3monitor
+      Qualifier: $LATEST
+      MaximumRetryAttempts: 0
 
   CloudWatchLogsMetricsFilter:
     Type: AWS::Logs::MetricFilter
-    Properties: 
-      FilterPattern: 'ERROR'
+    Properties:
+      FilterPattern: "ERROR"
       LogGroupName: !Sub "/aws/lambda/${PROJECT}-${ENV}"
-      MetricTransformations: 
-        -
-          MetricValue: "1"
+      MetricTransformations:
+        - MetricValue: "1"
           MetricNamespace: !Sub "${PROJECT}-${ENV}"
           MetricName: "ERROR"
           DefaultValue: 0
 
   ErrorAlarm:
-      Type: "AWS::CloudWatch::Alarm"
-      Properties:
-        ActionsEnabled: true
-        AlarmActions:
-          - !Ref AlertingTopic
-        AlarmDescription: !Sub >
-          Alarm for ERROR on ${PROJECT} Lambda function
-        ComparisonOperator: GreaterThanOrEqualToThreshold
-        EvaluationPeriods: 1
-        MetricName: ERROR
-        Namespace: !Sub "${PROJECT}-${ENV}"
-        OKActions:
-          - !Ref AlertingTopic
-        Period: 10
-        Statistic: Sum
-        Threshold: 1
-        TreatMissingData: ignore
+    Type: "AWS::CloudWatch::Alarm"
+    Properties:
+      ActionsEnabled: true
+      AlarmActions:
+        - !Ref AlertingTopic
+      AlarmDescription: !Sub >
+        Alarm for ERROR on ${PROJECT} Lambda function
+      ComparisonOperator: GreaterThanOrEqualToThreshold
+      EvaluationPeriods: 1
+      MetricName: ERROR
+      Namespace: !Sub "${PROJECT}-${ENV}"
+      OKActions:
+        - !Ref AlertingTopic
+      Period: 10
+      Statistic: Sum
+      Threshold: 1
+      TreatMissingData: ignore
 
   AlertingTopic:
     Type: "AWS::SNS::Topic"
