Add S3 log group and update logging in handlers; use latest SAM CLI action

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -33,13 +33,13 @@ jobs:
 
       # Build the SAM application
       - name: sam build
-        uses: TractorZoom/sam-cli-action@v1.0.0
+        uses: TractorZoom/sam-cli-action@latest
         with:
           sam_command: build -b ./build
 
       # Deploy the SAM application
       - name: sam deploy
-        uses: TractorZoom/sam-cli-action@v1.0.0
+        uses: TractorZoom/sam-cli-action@latest
         with:
           sam_command: |
             deploy \
