--- a/template.yml
+++ b/template.yml
@@ -81,6 +81,12 @@ Resources:
         Region: !Ref AWSREGION
         Reference: "https://zoph.io"
 
+  S3MonitorLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub "/aws/lambda/${s3monitor}"
+      RetentionInDays: 14 # You can adjust the retention period as needed
+
   LambdaSchedule:
     Type: AWS::Events::Rule
     Properties:
@@ -114,7 +120,7 @@ Resources:
     Type: AWS::Logs::MetricFilter
     Properties:
       FilterPattern: "ERROR"
-      LogGroupName: !Sub "/aws/lambda/${PROJECT}-${ENV}"
+      LogGroupName: !Ref S3MonitorLogGroup
       MetricTransformations:
         - MetricValue: "1"
           MetricNamespace: !Sub "${PROJECT}-${ENV}"
