Refactor CloudFormation template and handlers.py for improved consistency and performance; update GitHub Actions to use latest SAM CLI action
- Updated FunctionName and LogGroupName in template.yml to include PROJECT variable for better naming consistency.
- Added DeletionPolicy and UpdateReplacePolicy to S3MonitorLogGroup for resource management.
- Refactored handlers.py to use S3 paginator for handling large object lists, improving efficiency in backup checks.
- Updated GitHub Actions workflow to use the latest version of the AWS SAM CLI action.

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -33,15 +33,15 @@ jobs:
 
       # Build the SAM application
       - name: sam build
-        uses: TractorZoom/sam-cli-action@latest
+        uses: aws-actions/aws-sam-cli-action@v1
         with:
-          sam_command: build -b ./build
+          args: build -b ./build
 
       # Deploy the SAM application
       - name: sam deploy
-        uses: TractorZoom/sam-cli-action@latest
+        uses: aws-actions/aws-sam-cli-action@v1
         with:
-          sam_command: |
+          args: |
             deploy \
               --template-file build/template.yaml \
               --stack-name ${{ secrets.PROJECT }}-dev \
