--- a/template.yml
+++ b/template.yml
@@ -46,7 +46,7 @@ Resources:
   s3monitor:
     Type: "AWS::Serverless::Function"
     Properties:
-      FunctionName: !Sub s3-monitor-${ENV}
+      FunctionName: !Sub ${PROJECT}-${ENV}
       Description: !Sub "[${ENV}] S3 Backup Monitor (${PROJECT}) - https://zoph.io"
       Handler: handlers.main
       Runtime: python3.10
@@ -82,9 +82,11 @@ Resources:
         Reference: "https://zoph.io"
 
   S3MonitorLogGroup:
+    UpdateReplacePolicy: Delete
+    DeletionPolicy: Delete
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: !Sub "/aws/lambda/${s3monitor}"
+      LogGroupName: !Sub "/aws/lambda/${PROJECT}-${ENV}"
       RetentionInDays: 14 # You can adjust the retention period as needed
 
   LambdaSchedule:
@@ -117,10 +119,11 @@ Resources:
       MaximumRetryAttempts: 0
 
   CloudWatchLogsMetricsFilter:
+    DependsOn: S3MonitorLogGroup
     Type: AWS::Logs::MetricFilter
     Properties:
       FilterPattern: "ERROR"
-      LogGroupName: !Ref S3MonitorLogGroup
+      LogGroupName: !Sub "/aws/lambda/${PROJECT}-${ENV}"
       MetricTransformations:
         - MetricValue: "1"
           MetricNamespace: !Sub "${PROJECT}-${ENV}"
