--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
-name: "[Prod] GhA - Deploy s3-backup-notifier"
+name: "[Master] GhA - Deploy s3-backup-notifier"
 
 on:
   push:
     branches:
       - master
+
+env:
+  schedule: "DISABLED"
 
 jobs:
   aws_sam:
@@ -30,27 +33,28 @@ jobs:
 
       # Build the SAM application
       - name: sam build
-        uses: TractorZoom/sam-cli-action@v1.0.0
+        uses: aws-actions/aws-sam-cli-action@v1
         with:
-          sam_command: build -b ./build
+          args: build -b ./build
 
       # Deploy the SAM application
       - name: sam deploy
-        uses: TractorZoom/sam-cli-action@v1.0.0
+        uses: aws-actions/aws-sam-cli-action@v1
         with:
-          sam_command: |
+          args: |
             deploy \
               --template-file build/template.yaml \
-              --stack-name ${{ secrets.PROJECT }}-prod \
+              --stack-name ${{ secrets.PROJECT }}-dev \
               --s3-bucket ${{ secrets.PROJECT }}-artifacts \
               --region ${{ secrets.REGION }} \
               --no-fail-on-empty-changeset \
               --parameter-overrides \
-                ENV=prod \
+                ENV=dev \
                 MONITORINGBUCKET=${{ secrets.MONITORINGBUCKET }} \
                 S3PREFIX=${{ secrets.S3PREFIX }} \
                 PROJECT=${{ secrets.PROJECT }} \
                 RECIPIENTS=${{ secrets.RECIPIENTS }} \
                 SENDER=${{ secrets.SENDER }} \
                 AWSREGION=${{ secrets.REGION }} \
+                CRONENABLED=${{ env.schedule }} \
               --capabilities CAPABILITY_IAM
