--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -63,6 +63,7 @@ jobs:
       - name: pull-request
         uses: repo-sync/pull-request@v2
         with:
+          destination_branch: "master"
           pr_reviewer: "z0ph"
           pr_assignee: "z0ph"
           github_token: ${{ secrets.GITHUB_TOKEN }}
